--- a/home.html
+++ b/home.html
@@ -54,8 +54,27 @@
     </div>
    </section>
 
-   <section class="contact-form">
-    <h2 class="contact-me">Contact <span>Me</span></h2>
+   <section class="Projects">
+   <div class="Projects-content">
+    <h2 class="heading">Projects</h2><br>
+    <p>I'm a beginner and I haven't worked on any projects yet,<br>
+        Still learning new skill's to enhance my Design's.
+         <br>
+        </p>
+</div>
+</section>
+<section class="Experience">
+<div class="Experience-content">
+    <h2 class="heading">Experience</h2><br>
+    <p>I'am a Fresher but it would be my pleasure,<br>
+         if i get a chance to work for any company as an intern.
+         <br>
+        </p>
+</div>
+</section>
+
+   <section class="contact-form"><br>
+    <h2 class="contact-me">Contact Me</h2>
 
     <form action="#">
         <div class="input-box">
@@ -69,7 +88,8 @@
            </div>
 
            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
-           <input type="submit" value="Send Message" class="btn-1">
+           <input type="submit" value="Send Message" class="btn-1"><br>
+           <br>
     </form>
    </section>
 
